Fixed footer styles and alignment

--- a/client/src/garageListStyles.css
+++ b/client/src/garageListStyles.css
@@ -2,6 +2,11 @@
     width: 100%;
 }
 
+html, body {
+    min-height: 100%;
+
+}
+
 .garageWidth {
     width: 75%;
     margin-left: auto;
